# SnakeWiiU

./: .gitignore  CMakeLists.txt  build.sh
assets/: bootDrcTex.tga  bootTvTex.tga  iconTex.tga
src/: main.c  main.cpp
